2005-10-14  Kristian Høgsberg  <krh@redhat.com>

	* Makefile.am:
	* configure.ac:
	* include/dix-config.h.in:
	* os/Makefile.am: Hook up lbx.

2005-10-14  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	Set default font path to match the default in the monolith so
	fonts are actually found.

2005-10-14  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/Makefile.am: 
	* hw/xfree86/doc/Makefile.am: 
	Install Xorg & xorg.conf man pages even when not building docs

2005-10-14  Kristian Høgsberg  <krh@redhat.com>

	* hw/xfree86/os-support/Makefile.am (DIST_SUBDIRS): Add sysv and
	sco os-support subdirs and add simple EXTRA_DIST Makefile.am in
	those dirs.  Remove unsupported os-support subdirs (bsdi, dgux,
	hurd, nto, os2, pmax, qnx4) that have no maintainer and we don't
	dist.

	* hw/xfree86/Makefile.am (EXTRA_DIST): Add Options.

2005-10-13  Donnie Berkholz  <spyderous@gentoo.org>

	* configure.ac: Add XTRAP_LIB to XPRINT_EXTENSIONS to fix xprint build when
	xtrap is enabled.

2005-10-13  Donnie Berkholz  <spyderous@gentoo.org>

	* configure.ac: Require glproto >= 1.4.1 if building DRI with GLX. This
	fixes a build failure on a number of hyperpipe functions.

2005-10-13  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/utils/xorgconfig/Makefile.am (EXTRAMANDEFS): 
	Set substitutions needed in xorgconfig man page.

2005-10-13  Kristian Høgsberg  <krh@redhat.com>

	* hw/xfree86/xf4bpp/Makefile.am (libxf4bpp_la_SOURCES): Dist NOTES.

	* hw/xfree86/xf1bpp/Makefile.am (EXTRA_DIST): Dist helper shell
	scripts.

	* hw/xfree86/xaa/Makefile.am (EXTRA_DIST): Dist XAA.HOWTO and a
	few more unused C files.

	* hw/xfree86/Makefile.am (EXTRA_DIST): Dist xorgconf.cpp.

	* hw/xfree86/doc/Makefile.am (EXTRA_DIST): Fix DIST_EXTRA typo.

	* hw/dmx/config/Makefile.am (MAINTAINERCLEANFILES): Clean yacc and
	lex generated files only during make maintainer-clean as we don't
	expect users to have those tools installed.
